My First Commit

--- a/bootstrap.html
+++ b/bootstrap.html
@@ -49,13 +49,39 @@
         <div class="container">
             <div class="row">
                 <div class="col-6 mt-5 pt-5 ps-5">
-                    <h5>MILK BEVERAGE</hq5>
+                    <h6 style="color: green;">MILK BEVERAGE</h6>
                     <h1>ROSE MATCHA</h1>
                     <h1>ICED LATTE</h1>
-
+                    <p class="fst-italic">Infused with rose water and colored with hibiscus tea, this Iced Matcha Rose Latte is easy to make and almost too pretty to drink.</p>
+                    <h5>$39.99 <span class="fw-lighter">Regular Price</span></h5>
+                    <div class="d-grid gap-2 col-3 mt-3">
+                        <button class="btn btn-secondary" type="button">Buy Now</button>
+                    </div>
                 </div>
-                <div class="col-6">
-                    <h1>Gambar</h1>
+                <div class="col-4 ms-5 px-5 py-4">
+                    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+                        <div class="carousel-indicators">
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+                          <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+                        </div>
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="assets/matcharose.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                          <div class="carousel-item">
+                            <img src="assets/matcharose.jpeg" class="d-block w-100" alt="...">
+                          </div>
+                        </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
+                      </div>
                 </div>
             </div>
         </div>
