--- a/bootstrap.html
+++ b/bootstrap.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/bootstrap.css">
 </head>
 <body>
     <section class="makanan">
@@ -85,6 +86,52 @@
                 </div>
             </div>
         </div>
+        <footer class="py-3 mt-3 bg-dark">
+            <div class="footer-menu text-light fw-light">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-4 my-5">
+                            <h5>About Us</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="link-unstyled">Heritage</a></li>
+                                <li><a href="#" class="link-unstyled">Our Company</a></li>
+                                <li><a href="#" class="link-unstyled">Career Center</a></li>
+                                <li><a href="#" class="link-unstyled">Newsroom</a></li>
+                            </ul>
+                        </div>
+                        <div class="col-4 my-5">
+                            <h5>Customer Service</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="link-unstyled">Frequently Asked Question</a></li>
+                        </div>
+                        <div class="col-4 my-5">
+                            <h5>Quick Links</h5>
+                            <ul class="list-unstyled">
+                                <li><a href="#" class="link-unstyled">Store Locator</a></li>
+                                <li><a href="#" class="link-unstyled">For Partner</a></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="social-links">
+                <div class="container d-flex justify-content-center">
+                    <ul class="list-group list-group-horizontal gap-3">
+                        <li><a href="#"><img src="assets/instagram.png" alt="instagram"></a>
+                        <li><a href="#"><img src="assets/facebook.png" alt="instagram"></a>
+                        <li><a href="#"><img src="assets/twitter.png" alt="instagram"></a>
+                        <li><a href="#"><img src="assets/youtube.png" alt="instagram"></a>
+                    </ul>
+                </div>
+            </div>
+            <div class="copyright">
+                <div class="container">
+                    <div class="row">
+                        <p class="text-secondary small">© 2022 Nomimasu Company, All Rights Reserved.</p>
+                    </div>
+                </div>
+            </div>
+        </footer>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
